<resources>
    <string name="app_name">Day_0508_CaiPu</string>
    <string name="lead_btn">进入APP</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="mainfood">主食</string>
    <string name="desert">甜点</string>
    <string name="soup">汤品</string>
    <string name="moreperson">更多人群</string>
    <string name="chara">特点</string>
    <string name="tag">标签</string>
    <string name="peiliao">配料</string>
    <string name="refresh">下拉加载更多</string>
</resources>
