<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/lead_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lead_mainfood_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/food_main"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lead_mainfood_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lead_mainfood_img"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/mainfood"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lead_desert_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/food_sweet"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lead_desert_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/desert"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lead_soup_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/food_tang"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lead_soup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/soup"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lead_moreperson_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/lead_soup_img"
                android:background="@mipmap/food_poole"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lead_moreperson_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/moreperson"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="gone" />

        </LinearLayout>


        <ImageView
            android:id="@+id/lead_tag_two_img"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/lead_moreperson_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:layout_weight="1"
            android:background="@mipmap/lead_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/lead_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/lead_btn_background"
            android:text="@string/lead_btn"
            android:textSize="15sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lead_jindu_one_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@mipmap/lead_select" />

        <ImageView
            android:id="@+id/lead_jindu_two_img"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="50dp"
            android:background="@mipmap/lead_normal" />
    </LinearLayout>

</RelativeLayout>